comm. now via sxnet (tcp) not lanbahn (udp)

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -43,5 +43,28 @@
         android:defaultValue="@string/sel_style_default" />
             	
     </PreferenceCategory>
-
+    <PreferenceCategory android:title="@string/sxnet_server_settings" >
+    <!--    <CheckBoxPreference
+            android:defaultValue="false"
+            android:key="autoIPPref"
+            android:title="Automatically configure IP" /> -->
+        <EditTextPreference
+            android:name="SXnet server address"
+            android:defaultValue="@string/default_server_ip"
+            android:key="ipPref"
+            android:summary="@string/ip_address_of_server"
+            android:title="SXnet server address" />
+        <CheckBoxPreference
+            android:defaultValue="false"
+            android:key="enableDemoPref"
+            android:title="@string/enableDemo" />
+    </PreferenceCategory>
+    <PreferenceCategory android:title="@string/files_settings" >
+        <ListPreference
+            android:entries="@array/listEmpty"
+            android:entryValues="@array/listEmpty"
+            android:key="configFilenamePref"
+            android:summary="Bitte auswählen"
+            android:title="Panel Config File" />
+           </PreferenceCategory>
 </PreferenceScreen>
