--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string-array name="listEmpty">
+        <item>keine passenden Files!</item>
+    </string-array>
    <string-array name="styles">  
         <item>US (dark background)</item>  
         <item>DE (white background)</item>  
