--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -3,7 +3,9 @@
     <item android:id="@+id/menu_settings"
           android:title="@string/settings" />
     <item android:id="@+id/menu_about"
-          android:title="@string/about"  />     
+          android:title="@string/about"  />
+    <item android:id="@+id/menu_check_service"
+        android:title="@string/check_service"  />
     <item android:id="@+id/menu_quit"
             android:title="@string/quit"  />
 </menu>
