added scaling type 'automatic' to settings

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -13,4 +13,14 @@
         <item>DE</item>  
         <item>UK</item>  
    </string-array>
+    <string-array name="scaling">
+        <item>Automatic scale</item>
+        <item>Manual (Zoom/Pan)</item>
+        <item>Lock manual</item>
+    </string-array>
+    <string-array name="scaling_values">
+        <item>auto</item>
+        <item>manual</item>
+        <item>locked</item>
+    </string-array>
 </resources>
