added 5 scaling action buttons to actionbar, del old number_picker

--- a/app/src/main/res/layout/alert_dialog_sel_address.xml
+++ b/app/src/main/res/layout/alert_dialog_sel_address.xml
@@ -25,7 +25,7 @@
         android:layout_margin="5dip"
         android:gravity="center" >
 
-        <de.blankedv.lanbahnpanel.NumberPicker
+        <NumberPicker
             android:id="@+id/picker1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
