--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -29,35 +29,35 @@
     <item
         android:id="@+id/action_q1"
         android:layout_width="wrap_content"
-        android:icon="@drawable/q1_48"
+        android:icon="@drawable/q1_v2_48"
         android:orderInCategory="35"
         android:title="@string/power"
         app:showAsAction="always" />
     <item
         android:id="@+id/action_q2"
         android:layout_width="wrap_content"
-        android:icon="@drawable/q2_48"
+        android:icon="@drawable/q2_v2_48"
         android:orderInCategory="36"
         android:title="@string/power"
         app:showAsAction="always" />
     <item
         android:id="@+id/action_q3"
         android:layout_width="wrap_content"
-        android:icon="@drawable/q3_48"
+        android:icon="@drawable/q3_v2_48"
         android:orderInCategory="37"
         android:title="@string/power"
         app:showAsAction="always" />
     <item
         android:id="@+id/action_q4"
         android:layout_width="wrap_content"
-        android:icon="@drawable/q4_48"
+        android:icon="@drawable/q4_v2_48"
         android:orderInCategory="38"
         android:title="@string/power"
         app:showAsAction="always" />
     <item
         android:id="@+id/action_qall"
         android:layout_width="wrap_content"
-        android:icon="@drawable/qa_48"
+        android:icon="@drawable/qa_v2_48"
         android:orderInCategory="40"
         android:title="@string/power"
         app:showAsAction="always" />
