seperate sclale/xoff/yoff values stored to all 5 views

--- a/app/src/main/res/xml/pref_display.xml
+++ b/app/src/main/res/xml/pref_display.xml
@@ -17,6 +17,10 @@
         android:title="@string/sel_scale" />
     <CheckBoxPreference
         android:defaultValue="false"
+        android:key="enableFourQuadrantsPref"
+        android:title="@string/display_four_quadrants" />
+    <CheckBoxPreference
+        android:defaultValue="false"
         android:key="flipPref"
         android:title="@string/flipUpsideDown" />
     <CheckBoxPreference
