--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -16,11 +16,11 @@
         android:orderInCategory="100"
         android:title="@string/get_panel_from_server"
         app:showAsAction="never" />
-    <item
+    <!-- <item
         android:id="@+id/menu_check_service"
         android:orderInCategory="100"
         android:title="@string/check_service"
-        app:showAsAction="never" />
+        app:showAsAction="never" /> -->
     <item
         android:id="@+id/menu_quit"
         android:orderInCategory="100"
@@ -65,6 +65,13 @@
         android:id="@+id/action_space2"
         android:layout_width="wrap_content"
         android:icon="@drawable/trans_48"
+        android:orderInCategory="44"
+        android:title="@string/power"
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/action_lock_state"
+        android:layout_width="wrap_content"
+        android:icon="@drawable/ic_lock_white_48dp"
         android:orderInCategory="46"
         android:title="@string/power"
         app:showAsAction="always" />
