sx loco control and power status rec. works fine with SX3PC 2.21

--- a/app/src/main/res/xml/pref_headers.xml
+++ b/app/src/main/res/xml/pref_headers.xml
@@ -14,7 +14,7 @@
 
     <header
         android:fragment="de.blankedv.lanbahnpanel.settings.SettingsActivity$ControlPreferenceFragment"
-        android:icon="@drawable/control"
+        android:icon="@drawable/split_18dp"
         android:title="@string/pref_header_control" />
 
     <header
