added 4-asp.signal handling in sx messages, simplified settings

--- a/app/src/main/res/xml/pref_display.xml
+++ b/app/src/main/res/xml/pref_display.xml
@@ -2,7 +2,7 @@
 
     <CheckBoxPreference
         android:defaultValue="false"
-        android:key="enableLocoControlPref"
+        android:key="drawAddressesPref"
         android:title="@string/draw_addresses" />
     <CheckBoxPreference
         android:defaultValue="false"
