--- a/app/src/main/res/layout/alert_dialog_sel_address.xml
+++ b/app/src/main/res/layout/alert_dialog_sel_address.xml
@@ -6,30 +6,51 @@
 
    <TableRow
         android:layout_width="match_parent"
-        android:layout_margin="5dip"
-        android:gravity="center" >
+        android:layout_margin="5dip"   >
 
-        <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dip"
-            android:layout_weight="1"
-            android:gravity="right"
-            android:text="@string/adresse" />
+       <TextView
+           android:layout_width="fill_parent"
+           android:layout_height="wrap_content"
+           android:layout_margin="5dip"
+           android:layout_weight="2"
+           android:padding="5dip"
+           android:text="@string/adresse"
+           android:textSize="18sp" />
+
+       <TextView
+           android:id="@+id/tvInverted"
+           android:layout_width="fill_parent"
+           android:layout_height="wrap_content"
+           android:layout_margin="5dip"
+           android:layout_marginLeft="20dip"
+           android:layout_weight="1"
+           android:padding="5dip"
+           android:text="@string/inverted"
+           android:textSize="18sp" />
 
 
     </TableRow>
 
    <TableRow
         android:layout_width="match_parent"
-        android:layout_margin="5dip"
-        android:gravity="center" >
+        android:layout_margin="5dip" >
 
         <NumberPicker
             android:id="@+id/picker1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="5dip" />
+            android:layout_margin="5dip"
+            android:layout_weight="2" />
+
+       <CheckBox
+           android:id="@+id/cbInverted"
+           android:layout_width="fill_parent"
+           android:layout_height="wrap_content"
+           android:layout_gravity="center_vertical"
+           android:layout_margin="18sp"
+           android:layout_weight="1"
+           android:checked="false"
+           android:text="@string/yes_inverted" />
 
  
     </TableRow>
