--- a/app/src/main/res/xml/pref_control.xml
+++ b/app/src/main/res/xml/pref_control.xml
@@ -10,6 +10,13 @@
         android:key="configFilenamePref"
         android:summary="Bitte auswählen"
         android:title="@string/panel_cfg_files" />
+    <!-- <ListPreference
+        android:defaultValue="System SX oder DCC"
+        android:entries="@array/system"
+        android:entryValues="@array/system_values"
+        android:key="controlSystemPref"
+        android:summary="pls. select"
+        android:title="@string/sel_system_type" /> -->
     <CheckBoxPreference
         android:defaultValue="false"
         android:key="powerControlPref"
