--- a/app/src/main/res/layout/alert_dialog_sel_address.xml
+++ b/app/src/main/res/layout/alert_dialog_sel_address.xml
@@ -9,6 +9,7 @@
         android:layout_margin="5dip"   >
 
        <TextView
+           android:id="@+id/tvAddress"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
@@ -28,8 +29,30 @@
            android:text="@string/inverted"
            android:textSize="18sp" />
 
+       <TextView
+           android:id="@+id/tvAddress2"
+           android:layout_width="fill_parent"
+           android:layout_height="wrap_content"
+           android:layout_margin="5dip"
+           android:layout_weight="2"
+           android:padding="5dip"
+           android:text="@string/adresse2"
+           android:textSize="18sp" />
 
-    </TableRow>
+       <TextView
+           android:id="@+id/tvInverted2"
+           android:layout_width="fill_parent"
+           android:layout_height="wrap_content"
+           android:layout_margin="5dip"
+           android:layout_marginLeft="20dip"
+           android:layout_weight="1"
+           android:padding="5dip"
+           android:text="@string/inverted"
+           android:textSize="18sp" />
+
+
+
+   </TableRow>
 
    <TableRow
         android:layout_width="match_parent"
@@ -52,7 +75,26 @@
            android:checked="false"
            android:text="@string/yes_inverted" />
 
- 
+
+        <NumberPicker
+            android:id="@+id/picker2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dip"
+            android:layout_weight="2" />
+
+        <CheckBox
+            android:id="@+id/cbInverted2"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_margin="18sp"
+            android:layout_weight="1"
+            android:checked="false"
+            android:text="@string/yes_inverted" />
+
+
     </TableRow>
+
 
 </TableLayout>
