--- a/app/src/main/res/layout/about.xml
+++ b/app/src/main/res/layout/about.xml
@@ -30,7 +30,7 @@
 			android:layout_height="wrap_content" android:text=""
 			android:paddingTop="8sp" android:textSize="8sp" android:autoLink="all" />
 		<Button android:id="@+id/cancel" android:layout_width="fill_parent"
-			android:layout_height="wrap_content" android:text="@string/cancel"
+			android:layout_height="wrap_content" android:text="@string/back"
 			android:textSize="22sp" />
 	</LinearLayout>
 </ScrollView>
