removing edit mode, added writing of 'local' locos.xml file

--- a/app/src/main/res/xml/pref_loco.xml
+++ b/app/src/main/res/xml/pref_loco.xml
@@ -5,4 +5,9 @@
         android:key="enableLocoControlPref"
         android:title="Loco Control aktivieren" />
 
+    <CheckBoxPreference
+        android:defaultValue="false"
+        android:key="enableLocalLocolistPref"
+        android:title="Lokale Loco List verwenden" />
+
  </PreferenceScreen>
