--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -22,7 +22,7 @@
         android:title="@string/flipUpsideDown"
         app:showAsAction="never" />
     <!-- <item
-        android:id="@+id/menu_check_service"
+        android:adr="@+adr/menu_check_service"
         android:orderInCategory="100"
         android:title="@string/check_service"
         app:showAsAction="never" /> -->
